--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,6 +89,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+                storeFile file(MYAPP_UPLOAD_STORE_FILE)
+                storePassword MYAPP_UPLOAD_STORE_PASSWORD
+                keyAlias MYAPP_UPLOAD_KEY_ALIAS
+                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
@@ -115,5 +123,9 @@ dependencies {
         implementation jscFlavor
     }
 }
-
+project.ext.vectoricons = [
+    iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf','FontAwesome.ttf', 'FontAwesome5_Regular.ttf',
+             'FontAwesome5_Solid.ttf', 'FontAwesome5_Brands.ttf','FontAwesome6.ttf','FontAwesome6_Regular.ttf','FontAwesome6_Solid.ttf',"Entypo.ttf" ] // Specify font files
+]
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
