--- a/package.json
+++ b/package.json
@@ -10,8 +10,32 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.4.0",
+    "@react-native-community/slider": "^4.5.2",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "@shopify/flash-list": "^1.6.4",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-blur-effect": "^1.1.3",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-mmkv": "^2.12.2",
+    "react-native-reanimated": "^3.10.0",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1",
+    "react-native-shared-element": "^0.8.8",
+    "react-native-slider": "^0.11.0",
+    "react-native-svg": "^15.1.0",
+    "react-native-svg-transformer": "^1.3.0",
+    "react-native-track-player": "^4.1.1",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-webview": "^13.8.7",
+    "react-navigation-shared-element": "^3.1.3",
+    "ytmusic-api": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
