--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/blur": "^4.4.0",
+    "@google/generative-ai": "^0.11.1",
     "@react-native-community/slider": "^4.5.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.17",
